Fixed long link overflow on mobile screen

--- a/app/code/Medvids/DemoController/view/frontend/web/css/source/_module.less
+++ b/app/code/Medvids/DemoController/view/frontend/web/css/source/_module.less
@@ -1,7 +1,6 @@
 & when (@media-common = true) {
     .demo-result-container {
         border: 1px solid @color-layout-primary;
-        margin: auto 3rem;
         padding: 2rem;
 
         h2 {
@@ -14,7 +13,15 @@
 
             li {
                 font-size: 2rem;
+                word-break: break-word;
             }
         }
     }
 }
+
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
+    .demo-result-container {
+        margin: auto 3rem;
+    }
+}
+
